# nsight-compute

./: README.md  pyproject.toml
src/nsight_compute/: AchievedOccupancy.py  C2CLink.section  CPIStall.py  Compute.py  ComputeWorkloadAnalysis.section  FPInstructions.py  HighPipeUtilization.py  InstructionStatistics.section  IssueSlotUtilization.py  LaunchStatistics.py  LaunchStatistics.section  LocalMemoryUsage.py  Memory.py  MemoryApertureUsage.py  MemoryCacheAccessPattern.py  MemoryL2Compression.py  MemoryWorkloadAnalysis.section  MemoryWorkloadAnalysis_Chart.section  MemoryWorkloadAnalysis_Tables.section  MetricAggregation.py  NumaAffinity.section  NvRules.py  Nvlink.section  Nvlink_Topology.section  Occupancy.section  PCSamplingData.py  PMSamplingData.py  PmSampling.section  PmSampling_WarpStates.section  RequestedMetrics.py  SharedMemoryConflicts.py  SlowPipeLimiter.py  SourceCounters.section  SpeedOfLight.py  SpeedOfLight.section  SpeedOfLight_HierarchicalDoubleRooflineChart.section  SpeedOfLight_HierarchicalHalfRooflineChart.section  SpeedOfLight_HierarchicalSingleRooflineChart.section  SpeedOfLight_HierarchicalTensorRooflineChart.section  SpeedOfLight_Roofline.py  (+12 more)
